...
    <string name="monitor_cores">Physical cores</string>
    <string name="monitor_count">%1$,d</string>
    <string name="monitor_cpu_idle">Idle CPU</string>
    <string name="monitor_cpu_index">CPU %1$d</string>
    <string name="monitor_cpu_system">System CPU</string>
    <string name="monitor_cpu_user">User CPU</string>
    <string name="monitor_details">Details</string>
    <string name="monitor_disabled">Disabled</string>
    <string name="monitor_disk">Disk I/O</string>
    <string name="monitor_enabled">Enabled</string>
    <string name="monitor_filesystem">Filesystem</string>
    <string name="monitor_frequency">Current frequency</string>
    <string name="monitor_handles">Handles</string>
...
